--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+log = "0.4.22"
+env_logger = "0.11.8"
+anyhow = "1.0.93"
+ctor = "0.3"
+winit = "0.29"
